Clean up InitializedVariables analysis and move it to control flow